// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commands/loot/open should configure properly 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "open",
      Object {
        "aliases": Array [
          "open",
          "loot-open",
        ],
        "args": Array [
          Object {
            "id": "user",
            "prompt": Object {
              "start": "Which user would you like to open a lootbox for?",
            },
            "type": "member",
          },
          Object {
            "default": false,
            "id": "lucky",
            "match": "flag",
            "prefix": "lucky",
          },
        ],
        "category": "Loot",
        "channelRestriction": "guild",
        "description": Object {
          "content": "Opens a lootbox",
          "examples": Array [
            "open",
            "loot-open",
          ],
        },
        "options": Object {
          "permissions": [MockFunction],
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": undefined,
    },
  ],
}
`;

exports[`commands/loot/open should have proper default messages 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Drawing loot...",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
    Array [
      "<tier> prize won...",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
    Array [
      "Congratulations <user>, you won <reward>",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": "Drawing loot...",
    },
    Object {
      "isThrow": false,
      "value": "<tier> prize won...",
    },
    Object {
      "isThrow": false,
      "value": "Congratulations <user>, you won <reward>",
    },
  ],
}
`;

exports[`commands/loot/open should have proper default messages 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "Drawing loot...",
    ],
    Array [
      "<tier> prize won...",
    ],
    Array [
      Object {
        "embed": RichEmbed {
          "author": undefined,
          "color": 1234,
          "description": "Congratulations <user>, you won <reward>",
          "fields": Array [],
          "file": undefined,
          "files": Array [],
          "footer": undefined,
          "image": Object {
            "url": "tier1.png",
          },
          "thumbnail": undefined,
          "timestamp": undefined,
          "title": undefined,
          "url": undefined,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`commands/loot/open should use found matching messages 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "intro message",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
    Array [
      "draw message",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
    Array [
      "reward message",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": "intro message",
    },
    Object {
      "isThrow": false,
      "value": "draw message",
    },
    Object {
      "isThrow": false,
      "value": "reward message",
    },
  ],
}
`;

exports[`commands/loot/open should use found matching messages 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "intro message",
    ],
    Array [
      "draw message",
    ],
    Array [
      Object {
        "embed": RichEmbed {
          "author": undefined,
          "color": 1234,
          "description": "reward message",
          "fields": Array [],
          "file": undefined,
          "files": Array [],
          "footer": undefined,
          "image": Object {
            "url": "tier1.png",
          },
          "thumbnail": undefined,
          "timestamp": undefined,
          "title": undefined,
          "url": undefined,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;

exports[`commands/loot/open should use personal messages if found 1`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "personal intro message",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
    Array [
      "personal draw message",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
    Array [
      "personal reward message",
      Object {
        "id": 1,
      },
      Object {
        "id": "1234",
      },
      Object {
        "Loots": Array [
          Object {
            "id": 1,
          },
        ],
        "color": 1234,
        "id": 1,
        "image": "tier1.png",
        "luckyWeight": 30,
        "name": "Tier 1",
        "weight": 15,
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": "personal intro message",
    },
    Object {
      "isThrow": false,
      "value": "personal draw message",
    },
    Object {
      "isThrow": false,
      "value": "personal reward message",
    },
  ],
}
`;

exports[`commands/loot/open should use personal messages if found 2`] = `
[MockFunction] {
  "calls": Array [
    Array [
      "personal intro message",
    ],
    Array [
      "personal draw message",
    ],
    Array [
      Object {
        "embed": RichEmbed {
          "author": undefined,
          "color": 1234,
          "description": "personal reward message",
          "fields": Array [],
          "file": undefined,
          "files": Array [],
          "footer": undefined,
          "image": Object {
            "url": "tier1.png",
          },
          "thumbnail": undefined,
          "timestamp": undefined,
          "title": undefined,
          "url": undefined,
        },
      },
    ],
  ],
  "results": Array [
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
    Object {
      "isThrow": false,
      "value": Promise {},
    },
  ],
}
`;
